# torifune

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
backend/: .env.example  app.yaml  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/handler/: auth.go  ocr.go  usage.go
backend/internal/middleware/: auth.go  cors.go  ratelimit.go
knowledge/plans/: entry-delete-with-file-option.md
knowledge/specs/: file-structure.md
scripts/: format.sh  sync-version.mjs  test.sh
src-app/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
src-app/constants/: accountCategories.ts  currencies.ts
src-app/contexts/: AuthContext.tsx
src-app/hooks/: useAccountCategoryRulesStore.ts  useAuth.ts  useReceiptStore.ts  useReceiverNameHistoryStore.ts  useSettingsStore.ts  useValidationRulesStore.ts
src-app/services/: accountCategoryMatcher.ts  errorLog.ts  ocrResult.test.ts  ocrResult.ts  persistence.ts  validation.ts
src-app/styles/: index.css
src-app/types/: accountCategoryRule.ts  excel.ts  receipt.ts  receiverNameHistory.ts  validationRule.ts
src-app/utils/: dateUtils.ts  stringSimilarity.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  errorlog.rs  lib.rs  main.rs
src-tauri/src/providers/: googledocumentai.rs  mod.rs
(+51 files in other folders)
