[package]
name = "torifune"
version = "0.2.10"
description = "torifune - Receipt image/PDF analyzer with OCR"
authors = ["you"]
edition = "2021"

[lib]
name = "torifune_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OCR Provider dependencies
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
base64 = "0.22"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
trash = "5.2"
open = "5"
